--- a/WebContent/resources/css/formstyle.css
+++ b/WebContent/resources/css/formstyle.css
@@ -313,3 +313,29 @@ input[type=password]{
 }
 	
 }
+
+#processing{
+	
+	display: inline-block;
+/*   background-color: #0074d9;
+  height: 100px;
+  width: 100px;
+  font-size: 1px;
+  padding: 1px;
+  color: white;
+  margin-right: 5px;
+  margin-left: 5px; */
+  animation: roll 5s infinite;
+  transform: rotate(30deg);
+  opacity: .7;
+}
+
+@keyframes roll {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+
+}
